# structured_log_viewer

./: .clang-format  .clang-tidy  .cmake-format.py  .commit_msg.tmp  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  cmake-format.py  codecov.yml
.ci/: lsan.supp  tsan.supp
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  scorecard.yml
app/: .clang-tidy  CMakeLists.txt
app/include/: anchor_manager.hpp  anchors_dock.hpp  appearance_control.hpp  bounded_batch_queue.hpp  cli_parser.hpp  column_editor.hpp  columns_manager_dialog.hpp  configuration_diagnostics_dialog.hpp  filter_editor.hpp  filter_records_widget.hpp  filter_rule.hpp  find_dock.hpp  find_record_widget.hpp  highlight_rule_set.hpp  highlight_rules_editor.hpp  histogram_dock.hpp  histogram_model.hpp  histogram_widget.hpp  icon_loader.hpp  jump_to_tail_pill.hpp  level_cell_delegate.hpp  log_filter_model.h  log_filter_model.hpp  log_model.hpp  log_string_matcher.hpp  log_table_view.hpp  log_warning.hpp  main_window.hpp  network_stream_dialog.hpp  overview_rail_model.hpp  overview_rail_widget.hpp  parse_errors_dock.hpp  preferences_editor.hpp  qt_streaming_log_sink.hpp  record_detail_dock.hpp  record_detail_widget.hpp  record_detail_window.hpp  regex_template_registry.hpp  regex_templates_editor.hpp  row_order_proxy_model.hpp  (+8 more)
app/src/: anchor_manager.cpp  anchors_dock.cpp  appearance_control.cpp  column_editor.cpp  columns_manager_dialog.cpp  configuration_diagnostics_dialog.cpp  filter_editor.cpp  filter_records_widget.cpp  find_dock.cpp  find_record_widget.cpp  highlight_rule_set.cpp  highlight_rules_editor.cpp  histogram_dock.cpp  histogram_model.cpp  histogram_widget.cpp  icon_loader.cpp  jump_to_tail_pill.cpp  level_cell_delegate.cpp  log_filter_model.cpp  log_model.cpp  log_string_matcher.cpp  log_table_view.cpp  main.cpp  main_window.cpp  main_window.ui  network_stream_dialog.cpp  overview_rail_model.cpp  overview_rail_widget.cpp  parse_errors_dock.cpp  preferences_editor.cpp  qt_streaming_log_sink.cpp  record_detail_dock.cpp  record_detail_widget.cpp  record_detail_window.cpp  regex_template_registry.cpp  regex_templates_editor.cpp  row_order_proxy_model.cpp  session_history_manager.cpp  shortcut_catalog.cpp  shortcuts_dialog.cpp  (+4 more)
cmake/: BundleLicenses.cmake  CompilerWarnings.cmake  EmbedRegexTemplates.cmake  FetchDependencies.cmake
cmake/license_snippets/: lnav.txt  logstash_patterns_core.txt  lucide.txt  openssl.txt  qt.txt
deploy/: app.desktop
doc/: README.md  gui_modernization.md  linux-gcc-lto-investigation.md
docs/regex_templates_examples/: python_logging.json
resources/: app.desktop  resources.qrc
resources/themes/: catppuccin_mocha.json  dark.json  dracula.json  github_dark.json  github_light.json  high_contrast_dark.json  light.json  material_dark.json  material_light.json  monokai_dark.json  monokai_light.json  nord.json  paper_light.json  solarized_dark.json  solarized_light.json  tokyo_night.json
scripts/: Enter-DevShell.ps1
scripts/ci/: llvm.sh
tasks/: pr-description-fast-streaming-json-parser.md  prd-fast-streaming-json-parser.md  prd-hl-inspired-parser-performance.md  prd-log-stream-mode.md  prd-parser-performance-hardening.md  prd-parser-simplification.md  tasks-fast-streaming-json-parser.md  tasks-hl-inspired-parser-performance.md  tasks-log-stream-mode.md  tasks-parser-performance-hardening.md  tasks-parser-simplification.md
test/: .clang-tidy  CMakeLists.txt
test/app/: .clang-tidy  CMakeLists.txt
test/app/fixtures/: alt_timestamp_keys.jsonl  fixtures.qrc  invalid_lines.jsonl  iso_fractional_timestamp.jsonl  iso_offset_timestamp.jsonl  iso_space_timestamp.jsonl  iso_t_timestamp.jsonl  iso_t_timestamp.logfmt  mixed_columns.jsonl  mixed_tz_and_order.jsonl  parse_errors_panel.jsonl  single_line.logfmt  value_types.jsonl  value_types.logfmt
test/app/src/: benchmark_main_window.cpp  main_window_test.cpp  test_bounded_batch_queue.cpp  test_highlight_rule_set.cpp  test_histogram_dock.cpp  test_overview_rail.cpp  test_theme_control.cpp
test/common/: CMakeLists.txt
test/common/include/test_common/: json_log_line.hpp  log_format.hpp  log_generator.hpp  log_record.hpp  network_log_client.hpp
test/common/src/: json_log_line.cpp  log_format.cpp  log_generator.cpp  network_log_client.cpp
test/include/: common.hpp
test/lib/: CMakeLists.txt
test/lib/include/: benchmark_common.hpp  common.hpp
test/lib/include/loglib_test/: scaled_ms.hpp
test/lib/src/: benchmark_csv.cpp  benchmark_decompression.cpp  benchmark_histogram_bucket_index.cpp  benchmark_json.cpp  benchmark_log_filter.cpp  benchmark_logfmt.cpp  benchmark_regex.cpp  benchmark_stream.cpp  common.cpp  test_csv_parser.cpp  test_decompressing_byte_source.cpp  test_enum_dictionary.cpp  test_file_line_source.cpp  test_histogram_bucket_index.cpp  test_json_parser.cpp  test_key_index.cpp  test_log_compare.cpp  test_log_configuration.cpp  test_log_data.cpp  test_log_factory.cpp  test_log_file.cpp  test_log_filter.cpp  test_log_line.cpp  test_log_processing.cpp  test_log_source.cpp  test_log_table.cpp  test_logfmt_parser.cpp  test_parser_pipeline.cpp  test_regex_parser.cpp  test_regex_template_generators.cpp  test_regex_template_io.cpp  test_regex_templates.cpp  test_stream_line_source.cpp  test_stream_log_line.cpp  test_stream_stop_teardown.cpp  test_tailing_bytes_producer.cpp  test_tailing_file_source.cpp  test_tcp_server_producer.cpp  test_tcp_server_producer_tls.cpp  test_theme.cpp  (+1 more)
test/log_generator/: CMakeLists.txt
test/log_generator/src/: main.cpp
test/src/: common.cpp  test_json_line.cpp  test_json_parser.cpp  test_log_configuration.cpp  test_log_data.cpp  test_log_factory.cpp  test_log_line.cpp  test_log_processing.cpp  test_log_table.cpp
